# ai-agents

./: .gitignore  CHANGELOG.md  Cargo.toml  INDEPENDENCE.md  LICENSE-APACHE  LICENSE-MIT  README.md  wrangler.toml
crates/ai-agent-macro/: Cargo.toml
crates/ai-agent-macro/src/: lib.rs
crates/ai-agents/: Cargo.toml
crates/ai-agents-cli/: Cargo.toml
crates/ai-agents-cli/src/: approval.rs  cli.rs  lib.rs  main.rs  metadata.rs  repl.rs  run.rs
crates/ai-agents-context/: Cargo.toml
crates/ai-agents-context/src/: lib.rs  manager.rs  provider.rs  render.rs  source.rs
crates/ai-agents-core/: Cargo.toml
crates/ai-agents-core/src/: dot_path.rs  error.rs  lib.rs  message.rs  types.rs
crates/ai-agents-disambiguation/: Cargo.toml
crates/ai-agents-disambiguation/src/: clarifier.rs  config.rs  detector.rs  lib.rs  manager.rs  types.rs  util.rs
crates/ai-agents-facts/: Cargo.toml
crates/ai-agents-facts/src/: config.rs  dedup.rs  extractor.rs  lib.rs  store.rs
crates/ai-agents-hitl/: Cargo.toml
crates/ai-agents-hitl/src/: config.rs  engine.rs  handler.rs  lib.rs  localization.rs  types.rs
crates/ai-agents-hooks/: Cargo.toml
crates/ai-agents-hooks/src/: lib.rs
crates/ai-agents-llm/: Cargo.toml
crates/ai-agents-llm/src/: capability.rs  lib.rs  mock.rs  multi.rs  prompts.rs  registry.rs
crates/ai-agents-memory/: Cargo.toml
crates/ai-agents-memory/src/: compacting.rs  context.rs  in_memory.rs  lib.rs  summarizer.rs  token_budget.rs
crates/ai-agents-persona/: Cargo.toml
crates/ai-agents-persona/src/: conditions.rs  config.rs  evolution.rs  lib.rs  manager.rs  prompt.rs  snapshot.rs  templates.rs  tool.rs
crates/ai-agents-process/: Cargo.toml
crates/ai-agents-process/src/: config.rs  lib.rs  processor.rs
crates/ai-agents-reasoning/: Cargo.toml
crates/ai-agents-reasoning/src/: config.rs  evaluation.rs  lib.rs  metadata.rs  mode.rs  plan.rs  planning.rs
crates/ai-agents-recovery/: Cargo.toml
crates/ai-agents-recovery/src/: config.rs  error.rs  filter.rs  lib.rs  manager.rs
crates/ai-agents-runtime/: Cargo.toml
crates/ai-agents-runtime/src/: builder.rs  lib.rs  runtime.rs
crates/ai-agents-skills/: Cargo.toml
crates/ai-agents-skills/src/: definition.rs  executor.rs  lib.rs  loader.rs  router.rs
crates/ai-agents-state/: Cargo.toml
crates/ai-agents-state/src/: config.rs  evaluator.rs  lib.rs  machine.rs
crates/ai-agents-storage/: Cargo.toml
crates/ai-agents-storage/src/: lib.rs  redis.rs  snapshot.rs  sqlite.rs  storage.rs
crates/ai-agents-template/: Cargo.toml
crates/ai-agents-template/src/: inheritance.rs  lib.rs  loader.rs  renderer.rs
crates/ai-agents-tools/: Cargo.toml
crates/ai-agents-tools/src/: condition.rs  lib.rs  provider.rs  registry.rs  types.rs
crates/ai-agents/src/: lib.rs
crates/sllm-rs/: Cargo.toml  README.md
crates/sllm-rs/src/: error.rs  lib.rs  message.rs  traits.rs
examples/: Cargo.toml  README.md  disambiguation_agent.rs  hitl_agent.rs  memory_agent.rs  reasoning_agent.rs  simple_chat.rs  skill_agent.rs  sqlite_persistence.rs  state_machine_agent.rs  streaming_chat.rs  tool_agent_demo.rs  yaml_agent.rs
examples/basic/: Cargo.toml
examples/basic/src/: simple_chat.rs  tool_agent.rs
examples/common/: Cargo.toml
examples/common/src/: lib.rs
examples/disambiguation/: Cargo.toml
examples/disambiguation/agents/: disambiguation_agent.yaml
examples/disambiguation/src/: disambiguation_agent.rs
examples/ecommerce-assistant/: Cargo.toml
examples/ecommerce-assistant/src/: lib.rs  main.rs  utils.rs
examples/find-treasure/: Cargo.toml  README.md
examples/find-treasure/src/: bevy_main.rs  cmd_main.rs  lib.rs  main.rs  utils.rs
examples/hitl/: Cargo.toml
examples/hitl/src/: hitl_agent.rs
examples/memory/: Cargo.toml
examples/memory/agents/: memory_agent.yaml
examples/memory/src/: memory_agent.rs  sqlite_persistence.rs
examples/reasoning/: Cargo.toml
examples/reasoning/src/: reasoning_agent.rs
examples/rust/basic-api/: Cargo.toml
examples/rust/context/: Cargo.toml
examples/rust/custom-hitl/: Cargo.toml
examples/rust/custom-llm/: Cargo.toml
examples/rust/custom-tools/: Cargo.toml
examples/rust/disambiguation/: Cargo.toml
examples/rust/reasoning/: Cargo.toml
examples/rust/skills/: Cargo.toml
examples/rust/state-machine/: Cargo.toml
examples/rust/storage/: Cargo.toml
examples/skills/: Cargo.toml
examples/skills/agents/: skill_agent.yaml
examples/skills/src/: skill_agent.rs
examples/src/: lib.rs
examples/src/common/: repl.rs
examples/state-machine/: Cargo.toml
examples/state-machine/agents/: support_state_machine.yaml
examples/state-machine/src/: state_machine_agent.rs
examples/yaml/basic/: openai_compatible.yaml  simple_chat.yaml  simple_chat_stream.yaml  simple_tools.yaml
examples/yaml/context/: builtin_context.yaml  context_with_state.yaml  env_context.yaml  runtime_context.yaml  template_context.yaml
examples/yaml/disambiguation/: disambiguation_agent.yaml  disambiguation_basic.yaml  disambiguation_multilingual.yaml  disambiguation_with_state.yaml
examples/yaml/error-recovery/: basic_retry.yaml  context_overflow.yaml  llm_fallback.yaml
examples/yaml/hitl/: hitl_basic.yaml  hitl_conditions.yaml  hitl_multilingual.yaml
examples/yaml/memory/: memory_agent.yaml  memory_basic.yaml  memory_budget.yaml  memory_compacting.yaml
examples/yaml/orchestration/: code_review_group_chat.yaml  content_pipeline.yaml  customer_support_router.yaml  stock_analysis_concurrent.yaml  support_handoff.yaml  team_coordinator.yaml
examples/yaml/persona/: persona_basic.yaml  persona_evolution.yaml  persona_secrets.yaml
examples/yaml/process/: detect_language.yaml  extract_and_validate.yaml  input_normalize.yaml  output_sanitize.yaml
examples/yaml/reasoning/: reasoning_agent.yaml  reasoning_cot.yaml  reasoning_plan.yaml  reasoning_reflection.yaml  reasoning_with_state.yaml
examples/yaml/session/: cross_session.yaml  facts_basic.yaml  multi_actor.yaml
examples/yaml/skills/: skill_agent.yaml  skill_external_only.yaml  skill_inline_only.yaml  (+1 more)
src/: error.rs  (+6 more)
(+261 files in other folders)
