[workspace]
resolver = "2"
members = [
    "crates/ai-agents-core",
    "crates/ai-agents-llm",
    "crates/ai-agents-memory",
    "crates/ai-agents-storage",
    "crates/ai-agents-tools",
    "crates/ai-agents-state",
    "crates/ai-agents-context",
    "crates/ai-agents-process",
    "crates/ai-agents-skills",
    "crates/ai-agents-hitl",
    "crates/ai-agents-hooks",
    "crates/ai-agents-recovery",
    "crates/ai-agents-reasoning",
    "crates/ai-agents-template",
    "crates/ai-agents-runtime",
    "crates/ai-agents",
    "examples",
]

[workspace.package]
version = "1.0.0-rc.4"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/geminik23/ai-agents"
authors = ["Jaemin Kim <geminik23@gmail.com>"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = "1.0"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
futures = "0.3"
async-stream = "0.3"
parking_lot = "0.12"
minijinja = { version = "2.10", features = ["builtins"] }

llm = "1.3"
evalexpr = "11"
regex = "1"
rand = "0.8"

reqwest = { version = "0.12", features = ["json"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

ai-agents-core = { path = "crates/ai-agents-core" }
ai-agents-llm = { path = "crates/ai-agents-llm" }
ai-agents-memory = { path = "crates/ai-agents-memory" }
ai-agents-storage = { path = "crates/ai-agents-storage" }
ai-agents-tools = { path = "crates/ai-agents-tools" }
ai-agents-state = { path = "crates/ai-agents-state" }
ai-agents-context = { path = "crates/ai-agents-context" }
ai-agents-process = { path = "crates/ai-agents-process" }
ai-agents-skills = { path = "crates/ai-agents-skills" }
ai-agents-hitl = { path = "crates/ai-agents-hitl" }
ai-agents-hooks = { path = "crates/ai-agents-hooks" }
ai-agents-recovery = { path = "crates/ai-agents-recovery" }
ai-agents-reasoning = { path = "crates/ai-agents-reasoning" }
ai-agents-template = { path = "crates/ai-agents-template" }
ai-agents-runtime = { path = "crates/ai-agents-runtime" }
