[workspace]
resolver = "2"
members = [
    "crates/ai-agents-core",
    "crates/ai-agents-llm",
    "crates/ai-agents-memory",
    "crates/ai-agents-storage",
    "crates/ai-agents-tools",
    "crates/ai-agents-state",
    "crates/ai-agents-context",
    "crates/ai-agents-process",
    "crates/ai-agents-skills",
    "crates/ai-agents-hitl",
    "crates/ai-agents-hooks",
    "crates/ai-agents-recovery",
    "crates/ai-agents-reasoning",
    "crates/ai-agents-disambiguation",
    "crates/ai-agents-persona",
    "crates/ai-agents-template",
    "crates/ai-agents-runtime",
    "crates/ai-agents",
    "crates/ai-agents-cli",
]

[workspace.package]
version = "1.0.0-rc.9"
edition = "2024"
license = "MIT OR Apache-2.0"
homepage = "https://ai-agents.rs"
repository = "https://github.com/geminik23/ai-agents"
authors = ["Jaemin Kim <geminik23@gmail.com>"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = "1.0"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
futures = "0.3"
async-stream = "0.3"
parking_lot = "0.12"
minijinja = { version = "2.10", features = ["builtins"] }

llm = "1.3"
evalexpr = "11"
regex = "1"
rand = "0.8"

reqwest = { version = "0.12", features = ["json"] }
rmcp = { version = "1.2", default-features = false, features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
clap = { version = "4.5", features = ["derive"] }

ai-agents-core = { path = "crates/ai-agents-core", version = "1.0.0-rc.9" }
ai-agents-llm = { path = "crates/ai-agents-llm", version = "1.0.0-rc.9" }
ai-agents-memory = { path = "crates/ai-agents-memory", version = "1.0.0-rc.9" }
ai-agents-storage = { path = "crates/ai-agents-storage", version = "1.0.0-rc.9" }
ai-agents-tools = { path = "crates/ai-agents-tools", version = "1.0.0-rc.9" }
ai-agents-state = { path = "crates/ai-agents-state", version = "1.0.0-rc.9" }
ai-agents-context = { path = "crates/ai-agents-context", version = "1.0.0-rc.9" }
ai-agents-process = { path = "crates/ai-agents-process", version = "1.0.0-rc.9" }
ai-agents-skills = { path = "crates/ai-agents-skills", version = "1.0.0-rc.9" }
ai-agents-hitl = { path = "crates/ai-agents-hitl", version = "1.0.0-rc.9" }
ai-agents-hooks = { path = "crates/ai-agents-hooks", version = "1.0.0-rc.9" }
ai-agents-recovery = { path = "crates/ai-agents-recovery", version = "1.0.0-rc.9" }
ai-agents-reasoning = { path = "crates/ai-agents-reasoning", version = "1.0.0-rc.9" }
ai-agents-disambiguation = { path = "crates/ai-agents-disambiguation", version = "1.0.0-rc.9" }
ai-agents-persona = { path = "crates/ai-agents-persona", version = "1.0.0-rc.9" }
ai-agents-template = { path = "crates/ai-agents-template", version = "1.0.0-rc.9" }
ai-agents-runtime = { path = "crates/ai-agents-runtime", version = "1.0.0-rc.9" }
ai-agents = { path = "crates/ai-agents", version = "1.0.0-rc.9" }
