[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
name = "example_support"
path = "src/lib.rs"

[dependencies]
ai-agents = { path = "../crates/ai-agents", features = ["full"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }

[[example]]
name = "simple_chat"
path = "simple_chat.rs"

[[example]]
name = "state_machine_agent"
path = "state_machine_agent.rs"

[[example]]
name = "streaming_chat"
path = "streaming_chat.rs"

[[example]]
name = "yaml_agent"
path = "yaml_agent.rs"

[[example]]
name = "skill_agent"
path = "skill_agent.rs"

[[example]]
name = "tool_agent_demo"
path = "tool_agent_demo.rs"

[[example]]
name = "memory_agent"
path = "memory_agent.rs"

# [[example]]
# name = "hitl_agent"
# path = "hitl_agent.rs"

# [[example]]
# name = "multilingual_tools"
# path = "multilingual_tools.rs"

# [[example]]
# name = "sqlite_persistence"
# path = "sqlite_persistence.rs"

# [[example]]
# name = "reasoning_agent"
# path = "reasoning_agent.rs"

# [[example]]
# name = "disambiguation_agent"
# path = "disambiguation_agent.rs"
