[workspace]
resolver = "2"
members = [
    "rust/basic-api",
    "rust/state-machine",
    "rust/storage",
    "rust/custom-hitl",
    "rust/reasoning",
    "rust/disambiguation",
]

[workspace.package]
edition = "2024"
publish = false
license = "MIT OR Apache-2.0"

[workspace.dependencies]
ai-agents = { path = "../crates/ai-agents", features = ["full"] }
ai-agents-cli = { path = "../crates/ai-agents-cli" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
anyhow = "1"
serde_json = "1"
async-trait = "0.1"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
