[package]
name = "ai-agent-macro"
version = "0.1.1"
authors = ["Jaemin Kim <geminik23@gmail.com>"]
edition = "2021"
description = "ai-agents macro"
license = "MIT"
# readme = "README.md"
# documentation = "https://docs.rs/"
repository = "https://github.com/geminik23/ai-agents"
# keywords = []


[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
