[package]
name = "ai-agents-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Command-line interface for running YAML-defined AI agents"

[[bin]]
name = "ai-agents-cli"
path = "src/main.rs"

[dependencies]
ai-agents = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
