[package]
name = "ai-agents-disambiguation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Intent disambiguation support for AI Agents framework"

[dependencies]
ai-agents-core = { workspace = true }
ai-agents-llm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde_yaml = { workspace = true }
