[package]
name = "ai-agents-hooks"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Agent hooks and events for AI Agents framework"

[dependencies]
ai-agents-core = { workspace = true }
ai-agents-llm = { workspace = true }
ai-agents-memory = { workspace = true }
ai-agents-hitl = { workspace = true }
ai-agents-tools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
parking_lot = { workspace = true }
