[package]
name = "ai-agents-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "LLM providers for AI Agents framework"

[dependencies]
ai-agents-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
tracing = { workspace = true }
llm = { workspace = true }
parking_lot = { workspace = true }
minijinja = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
