[package]
name = "ai-agents-recovery"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Error recovery system for AI Agents framework"

[dependencies]
ai-agents-core = { workspace = true }
ai-agents-llm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
serde_yaml = { workspace = true }
