[package]
name = "ai-agents-skills"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Skill system for AI Agents framework"
keywords = ["AI", "Agent", "LLM", "YAML", "Framework"]
categories = ["asynchronous"]

[dependencies]
ai-agents-core = { workspace = true }
ai-agents-llm = { workspace = true }
ai-agents-reasoning = { workspace = true }
ai-agents-disambiguation = { workspace = true }
ai-agents-tools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
minijinja = { workspace = true }
