[package]
name = "ai-agents-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Storage backends for AI Agents framework"

[dependencies]
ai-agents-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

sqlx = { workspace = true, optional = true }
redis = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = []
sqlite = ["sqlx"]
redis-storage = ["redis"]
