[package]
name = "ai-agents-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Tool system for AI Agents framework"
keywords = ["AI", "Agent", "LLM", "YAML", "Framework"]
categories = ["asynchronous"]

[dependencies]
ai-agents-core = { workspace = true }
ai-agents-state = { workspace = true }
ai-agents-llm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
evalexpr = { workspace = true }
regex = { workspace = true }
rand = { workspace = true }
minijinja = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }

reqwest = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
serde_yaml = { workspace = true }

[features]
default = []
http-tool = ["reqwest"]
