[package]
name = "find-treasure"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = ["commandline"]
commandline = ["crossterm"]
inbevy = ["bevy/dynamic_linking"]

[dependencies]
dotenv.workspace = true
log.workspace = true
env_logger.workspace = true
serde.workspace = true
serde_json.workspace = true
ai-agents = "0.2"

crossterm = {verions="0.27", optional=true}
bevy = {version = "0.13", optional = true}
