[package]
name = "example-hitl"
version = "0.0.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
ai-agents = { workspace = true }
example-common = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[[bin]]
name = "hitl-agent"
path = "src/hitl_agent.rs"
