[package]
name = "example-memory"
version = "0.0.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
ai-agents = { workspace = true }
example-common = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }

[[bin]]
name = "memory-agent"
path = "src/memory_agent.rs"

[[bin]]
name = "sqlite-persistence"
path = "src/sqlite_persistence.rs"
